--- a/index.html
+++ b/index.html
@@ -1,1 +1,118 @@
-<h1>Hello World!</h1>
+<html lang="en" data-bs-theme="light">
+<head>
+    <title>NAVBAR</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive design -->
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body class="Light-mode">
+    <!-- Include Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+
+    <!-- Theme Toggle Button -->
+    <div class="theme-toggle-container">
+        <button class="theme-toggle" aria-label="Toggle Theme">🌛</button>
+    </div>
+
+    <!-- Navbar-->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <!-- Logo and Brand Name -->
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <img src="images/golden lab.png" alt="Golden Lab Logo" width="150" height="150" class="d-inline-block align-text-center me-2">
+                Woof Cutz
+            </a>
+
+            <!-- Navbar Toggler Button for Collapsible Menu -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <!-- Collapsible Menu -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!-- Push to the right using ms-auto -->
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/navbar.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../gallery.html">Gallery</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Services
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Service1</a></li>
+                            <li><a class="dropdown-item" href="#">Service2</a></li>
+                            <li><a class="dropdown-item" href="#">Service3</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Welcome page containers -->
+    <div class="welcome-container-top">
+        <div class="welcome-box">
+            <img src="images/mut1.jpg" alt="Yorkie getting a his hair combed">
+            <h2>Welcome to Woof Cuts</h2>
+            <p>Co. Mayo’s trusted destination for exceptional dog grooming services.</p>
+        </div>
+        <div class="welcome-box">
+            <img src="images/mut2.jpg" alt="Small dog getting a trim">
+            <h2>Professional Grooming</h2>
+            <p>From baths to nail trimming, we ensure your dog looks and feels great!</p>
+        </div>
+        <div class="welcome-box">
+            <img src="images/mut3.jpg" alt="Happy dog with after bath">
+            <h2>Friendly Environment</h2>
+            <p>A calm and welcoming space for dogs of all breeds and sizes.</p>
+        </div>
+    </div>
+
+    <!-- Google Map -->
+    <div class="map-container">
+        <h1 id="location">Our Location</h1>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9939.438389581295!2d-9.109632137977059!3d53.9957608966133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48594f001623c511%3A0x49d3bd05e0ce7bc7!2sWoof%20Cutz%20-%20Dog%20Groomer!5e0!3m2!1sen!2sie!4v1732142061725!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-section">
+                <h4>About Us</h4>
+                <p>Woof Cuts is dedicated to providing top-notch grooming services for your furry friends in Co. Mayo, Ireland. We treat every dog with care and love!</p>
+            </div>
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="/navbar.html">About</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="#location">Location</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Contact Us</h4>
+                <p>Email: info@woofcuts.ie</p>
+                <p>Phone: +353 123 4567</p>
+                <p>Address: Foxford, Co. Mayo, Ireland</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Woof Cuts. All Rights Reserved.</p>
+        </div>
+    </footer>
+
+    <!-- FontAwesome Script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+</body>
+</html>
