recent updates href links and footer

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!-- Push to the right using ms-auto -->
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../gallery.html">Gallery</a>
@@ -78,6 +78,13 @@
         </div>
     </div>
 
+    <!-- about us section -->
+
+    <div class="about-us">
+        <h4 id="#about-us" href="/index.html/#about us">About Us</h4>
+        <p>Woof Cuts is dedicated to providing top-notch grooming services for your furry friends in Co. Mayo, Ireland. We treat every dog with care and love!</p>
+    </div>
+
     <!-- Google Map -->
     <div class="map-container">
         <h1 id="location">Our Location</h1>
@@ -88,15 +95,11 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-section">
-                <h4>About Us</h4>
-                <p>Woof Cuts is dedicated to providing top-notch grooming services for your furry friends in Co. Mayo, Ireland. We treat every dog with care and love!</p>
-            </div>
-            <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="/navbar.html">About</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="../services">Services</a></li>
+                    <li><a href="../index.html/#about-us">About</a></li>
+                    <li><a href="../contact">Contact</a></li>
                     <li><a href="#location">Location</a></li>
                 </ul>
             </div>
