fixed the links in all pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en" data-bs-theme="light">
 <head>
-    <title>NAVBAR</title>
+    <title>Woof Cutz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive design -->
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" rel="stylesheet">
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!-- Push to the right using ms-auto -->
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">About Us</a>
+                        <a class="nav-link active" aria-current="page" href="index.html#about-us">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../gallery.html">Gallery</a>
@@ -97,10 +97,10 @@
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="../services">Services</a></li>
-                    <li><a href="../index.html/#about-us">About</a></li>
-                    <li><a href="../contact">Contact</a></li>
-                    <li><a href="#location">Location</a></li>
+                    <li><a href="../services.html">Services</a></li>
+                    <li><a href="index.html/#about-us">About</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
+                    <li><a href="#location.html">Location</a></li>
                 </ul>
             </div>
             <div class="footer-section">
