--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="../services">Services</a></li>
+                    <li><a href="../services.html">Services</a></li>
                     <li><a href="../index.html#about-us">About</a></li>
                     <li><a href="/contact.html">Contact</a></li>
                     <li><a href="../index.html#location">Location</a></li>
