--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="../services.html">Services</a></li>
-                    <li><a href="index.html/#about-us">About</a></li>
+                    <li><a href="/services.html">Services</a></li>
+                    <li><a href="/index.html#about-us">About</a></li>
                     <li><a href="../contact.html">Contact</a></li>
-                    <li><a href="#location.html">Location</a></li>
+                    <li><a href="#location">Location</a></li>
                 </ul>
             </div>
             <div class="footer-section">
