--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class="nav-link active" aria-current="page" href="#about-us">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/gallery.html">Gallery</a>
+                        <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -97,10 +97,10 @@
             <div class="footer-section">
                 <h4>Quick Links</h4>
 <ul>
-    <li><a href="/services.html">Services</a></li>
-    <li><a href="/#about-us">About</a></li>
-    <li><a href="/contact.html">Contact</a></li>
-    <li><a href="/#location">Location</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="#about-us">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="#location">Location</a></li>
 </ul>
             </div>
             <div class="footer-section">
