--- a/gallery.html
+++ b/gallery.html
@@ -70,12 +70,13 @@
         <div class="footer-container">
                 <div class="footer-section">
                 <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="index.html#about-us">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="index.html#location">Location</a></li>
-                </ul>
+                <h4>Quick Links</h4>
+<ul>
+    <li><a href="/services.html">Services</a></li>
+    <li><a href="/#about-us">About</a></li>
+    <li><a href="/contact.html">Contact</a></li>
+    <li><a href="/#location">Location</a></li>
+</ul>
             </div>
             <div class="footer-section">
                 <h4>Contact Us</h4>
