--- a/services.html
+++ b/services.html
@@ -36,10 +36,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!-- Push to the right using ms-auto -->
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/gallery.html">Gallery</a>
+                        <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -52,7 +52,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -87,10 +87,10 @@
                 <h4>Quick Links</h4>
                 <h4>Quick Links</h4>
     <ul>
-        <li><a href="/services.html">Services</a></li>
-        <li><a href="/#about-us">About</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-        <li><a href="/#location">Location</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="#about-us">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="#location">Location</a></li>
     </ul>
             </div>
             <div class="footer-section">
