--- a/services.html
+++ b/services.html
@@ -86,12 +86,12 @@
              <div class="footer-section">
                 <h4>Quick Links</h4>
                 <h4>Quick Links</h4>
-    <ul>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="#about-us">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="#location">Location</a></li>
-    </ul>
+                <ul>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="/index.html#about-us">About</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/index.html#location">Location</a></li>
+                </ul>
             </div>
             <div class="footer-section">
                 <h4>Contact Us</h4>
