--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                     <li><a href="/services.html">Services</a></li>
                     <li><a href="../index.html#about-us">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="../index.html#location">Location</a></li>
+                    <li><a href="/index#location">Location</a></li>
                 </ul>
             </div>
             <div class="footer-section">
