--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                 <h4>Quick Links</h4>
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="/services.html">Services</a></li>
+                    <li><a href="services.html">Services</a></li>
                     <li><a href="#about-us">About</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li><a href="#location">Location</a></li>
                 </ul>
 
