--- a/gallery.html
+++ b/gallery.html
@@ -72,10 +72,10 @@
                 <h4>Quick Links</h4>
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="/services.html">Services</a></li>
-                    <li><a href="/index.html#about-us">About</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="/index.html#location">Location</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="index.html#about-us">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html#location">Location</a></li>
                 </ul>
             </div>
             <div class="footer-section">
