--- a/services.html
+++ b/services.html
@@ -88,9 +88,9 @@
                 <h4>Quick Links</h4>
                 <ul>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="/index.html#about-us">About</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="/index.html#location">Location</a></li>
+                    <li><a href="index.html#about-us">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html#location">Location</a></li>
                 </ul>
             </div>
             <div class="footer-section">
