new changes to toggle theme

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,16 @@
         </div>
     </nav>
 
-    <!-- main page items-->
+    <!-- contact page items-->
+
+    <div>contact</div>
+    <div>contact</div>
+    <div>contact</div>
+    <div>contact</div>
+    <div>contact</div>
+    <div>contact</div>
+    <div>contact</div>
+    <div>contact</div>
 
 
 
