--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,13 @@
 
   <!-- gallery page details-->
 
- 
+  <div>GALLERY</div>
+  <div>GALLERY</div>
+  <div>GALLERY</div>
+  <div>GALLERY</div>
+  <div>GALLERY</div>
+  <div>GALLERY</div>
+  <div>GALLERY</div>
 
 
 
