--- a/services.html
+++ b/services.html
@@ -59,7 +59,13 @@
         </div>
     </nav>
 
-    
+    <div>SERVICES</div>
+    <div>SERVICES</div>
+    <div>SERVICES</div>
+    <div>SERVICES</div>
+    <div>SERVICES</div>
+    <div>SERVICES</div>
+    <div>SERVICES</div>
 
 
 
@@ -84,7 +90,6 @@
     <footer class="footer">
         <div class="footer-container">
              <div class="footer-section">
-                <h4>Quick Links</h4>
                 <h4>Quick Links</h4>
                 <ul>
                     <li><a href="services.html">Services</a></li>
