--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -36,7 +37,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!-- Push to the right using ms-auto -->
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="navbar.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="gallery.html">Gallery</a>
@@ -61,21 +62,190 @@
 
   <!-- gallery page details-->
 
-
-</style>
-</head>
-<body>
-<h1 style="text-align: center; margin: 20px;">Responsive Image Gallery</h1>
-<div class="gallery">
-<div class="gallery-item"><img src="https://via.placeholder.com/300x200" alt="Gallery Image 1"></div>
-<div class="gallery-item"><img src="https://via.placeholder.com/300x200" alt="Gallery Image 2"></div>
-<div class="gallery-item"><img src="https://via.placeholder.com/300x200" alt="Gallery Image 3"></div>
-<div class="gallery-item"><img src="https://via.placeholder.com/300x200" alt="Gallery Image 4"></div>
-<div class="gallery-item"><img src="https://via.placeholder.com/300x200" alt="Gallery Image 5"></div>
-<div class="gallery-item"><img src="https://via.placeholder.com/300x200" alt="Gallery Image 6"></div>
+  <h1>Woof Cutz Gallery</h1>
+  <div class="gallery">
+    <a href="#img1"><img src="images/cavalier-king-charles-spaniel-grooming.jpeg" alt="king-charles-spaniel-grooming"></a>
+    <a href="#img2"><img src="images\golden lab with towel on head.jpg" alt="Image 2"></a>
+    <a href="#img3"><img src="images\Pom getting a trim.jpg" alt="Pom getting a trim"></a>
+    <a href="#img4"><img src="images\Golden lab in bath.jpg" alt="Golden lab in bath"></a>
+    <a href="#img5"><img src="images\Golden Cocker getting a trim.jpg" alt="Golden Cocker getting a trim"></a>
+    <a href="#img6"><img src="\images\mut3.jpg" alt="Scottish terrier wrapped in towel"></a>
+    <a href="#img7"><img src="\images\Nail Trim.jpg" alt="Nail Trim"></a>
+    <a href="#img8"><img src="images\groomed-yorkie.jpg" alt="Happy Yorkie"></a>
+    <a href="#img9"><img src="images\poodel trim.jpg" alt="poodle"></a>
+    <a href="#img10"><img src= "images\mut1.jpg" alt="Scottish terrier being combed"></a>
+    <a href="#img11"><img src="images\Reb in a bubbkle bath.jpg" alt="red in a bubble bath"></a>
+    <a href="#img12"><img src="images\Cooper in a tie.jpg" alt="Cooper smiling"></a>
+    <a href="#img13"><img src="images\miniture schnauzer.jpg" alt="MINITURE SCHANUZER"></a>
+    <a href="#img14"><img src="images\Dog in a Salon.jpg" alt="Dogs in a hair Salon"></a>
+    <a href="#img15"><img src="images\Dogs in a big bath.jpeg" alt="Dogs in a big bath"></a>
+    <a href="#img16"><img src="images\golden lab daycare.jpg" alt="Golden Lab at daycare"></a>
+    <a href="#img17"><img src="images\daycare.jpg" alt="Dogs at daycare"></a>
+    <a href="#img18"><img src="images\Dogs-at-Daycare-in-Foxford.jpg" alt="Dogs having fun at daycare">
+    <a href="#img19"><img src="images\doggy-daycare.jpg" alt="dogs running through field"></a>
+    <a href="#img20"><img src="images\Golden lab having bath.jpg" alt="Golden lab having bubble bath"></a>
+    <a href="#img21"><img src="images\mut2.jpg" alt="Dog being groomed"></a>
+    <a href="#img22"><img src="images\Dog-Daycare-for-Large-Dogs.jpg" alt="Day care"></a>
+    <a href="#img23"><img src="images\group.jpeg" alt="Group photo"></a>
+    <a href="#img24"><img src="images\happy-senior-dog-at-daycare_Ryan-Brix_Shutterstock.jpg" alt="Senior dog"></a>
+    <a href="#img25"><img src="images\choc_Lab.jpg" alt="Chocolate Lab with a ball"></a>
+    <a href="#img26"><img src="images\sleeping time.jpg" alt="Dogs sleeping"></a>
+    <a href="#img27"><img src="images\Paws-N.jpg" alt="Paws on a rampage"></a>
+    <a href="#img28"><img src="images\craic.jpg" alt="Dogs having the craic"></a>
+    <a href="#img29"><img src="images\home time.jpg" alt="Home time"></a>
+    <a href="#img30"><img src="images\AI terrior.jpg" alt="Ai terrier"></a>
+    <a href="#img31"><img src="images\Black lab.jpg" alt="Black Lab"></a>
+    <a href="#img32"><img src="images\Blow dry.jpg" alt="Blow dry"></a>
+    <a href="#img33"><img src="images\Hastings-Veterinary-Hospital-3-Big-Tips-for-Grooming-Your-Long-haired-Dog.jpg" alt="Red Collie"></a>
+    <a href="#img34"><img src="images\woof2.jpg" alt="Dog picture"></a>
+    <a href="#img35"><img src="images\Willow on grooming bench.jpg" alt="Willow"></a>
 </div>
-</body>
-</html>
+
+ <!-- Lightbox Modals -->
+ <div class="lightbox" id="img1">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images/cavalier-king-charles-spaniel-grooming.jpeg" alt="king-charles-spaniel-grooming">
+</div>
+<div class="lightbox" id="img2">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\golden lab with towel on head.jpg" alt="images\golden lab with towel on head">
+</div>
+<div class="lightbox" id="img3">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Pom getting a trim.jpg" alt="Pom getting a trim">
+</div>
+<div class="lightbox" id="img4">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Golden lab in bath.jpg" alt="Golden lab in bath">
+</div>
+<div class="lightbox" id="img5">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Golden Cocker getting a trim.jpg" alt="Golden Cocker getting a trim">
+</div>
+<div class="lightbox" id="img6">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="\images\mut3.jpg" alt="Scottish terrier wrapped in towel">
+</div>
+<div class="lightbox" id="img7">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="\images\Nail Trim.jpg" alt="Nail Trim">
+</div>
+<div class="lightbox" id="img8">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\groomed-yorkie.jpg" alt="Happy Yorkie">
+</div>
+<div class="lightbox" id="img9">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\poodel trim.jpg" alt="poodle">
+</div>
+<div class="lightbox" id="img10">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src= "images\mut1.jpg" alt="Scottish terrier being combed">
+</div>
+<div class="lightbox" id="img11">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Reb in a bubbkle bath.jpg" alt="red in a bubble bath">
+</div>
+<div class="lightbox" id="img12">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Cooper in a tie.jpg" alt="Cooper smiling">
+</div>
+<div class="lightbox" id="img13">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\miniture schnauzer.jpg" alt="MINITURE SCHANUZER">
+</div>
+<div class="lightbox" id="img14">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Dog in a Salon.jpg" alt="Dogs in a hair Salon">
+</div>
+<div class="lightbox" id="img15">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Dogs in a big bath.jpeg" alt="Dogs in a big bath"></a>
+</div>
+<div class="lightbox" id="img16">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\golden lab daycare.jpg" alt="Golden Lab at daycare"></a>
+</div>
+<div class="lightbox" id="img17">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\daycare.jpg" alt="Dogs at daycare">
+</div>
+<div class="lightbox" id="img18">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Dogs-at-Daycare-in-Foxford.jpg" alt="Dogs having fun at daycare">
+</div>
+<div class="lightbox" id="img19">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\doggy-daycare.jpg" alt="dogs running through field">
+</div>
+<div class="lightbox" id="img20">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Golden lab having bath.jpg" alt="Golden lab having bubble bath">
+</div>
+<div class="lightbox" id="img21">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\mut2.jpg" alt="Dog being groomed">
+</div>
+
+
+<!--start here later-->
+
+<div class="lightbox" id="img22">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Dog-Daycare-for-Large-Dogs.jpg" alt="Day care"></div>
+<div class="lightbox" id="img23">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\group.jpeg" alt="Group photo"></div>
+<div class="lightbox" id="img24">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\happy-senior-dog-at-daycare_Ryan-Brix_Shutterstock.jpg" alt="Senior dog">
+</div>
+<div class="lightbox" id="img25">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\choc_Lab.jpg" alt="Chocolate Lab with a ball">
+</div>
+
+<div class="lightbox" id="img26">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\sleeping time.jpg" alt="Dogs sleeping">
+</div>
+<div class="lightbox" id="img27">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Paws-N.jpg" alt="Paws on a rampage">
+</div>
+<div class="lightbox" id="img28">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\craic.jpg" alt="Dogs having the craic">
+</div>
+<div class="lightbox" id="img29">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\home time.jpg" alt="Home time">
+</div>
+<div class="lightbox" id="img30">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\AI terrior.jpg" alt="Ai terrier">
+</div>
+<div class="lightbox" id="img31">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Black lab.jpg" alt="Black Lab">
+</div>
+<div class="lightbox" id="img32">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Blow dry.jpg" alt="Blow dry">
+</div>
+<div class="lightbox" id="img33">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Hastings-Veterinary-Hospital-3-Big-Tips-for-Grooming-Your-Long-haired-Dog.jpg" alt="Red Collie">
+</div>
+<div class="lightbox" id="img34">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\woof2.jpg" alt="Dog picture"></a>
+</div>
+<div class="lightbox" id="img35">
+    <a href="#" class="lightbox-close">&times;</a>
+    <img src="images\Willow on grooming bench.jpg" alt="Willow">
+</div>
+
 
 
 
