--- a/gallery.html
+++ b/gallery.html
@@ -65,15 +65,15 @@
   <h1>Woof Cutz Gallery</h1>
   <div class="gallery">
     <a href="#img1"><img src="images/cavalier-king-charles-spaniel-grooming.jpeg" alt="king-charles-spaniel-grooming"></a>
-    <a href="#img2"><img src="images\golden lab with towel on head.jpg" alt="Image 2"></a>
+    <a href="#img2"><img src="images\golden lab with towel on head.jpg" alt="Golden lab with towel on his head"></a>
     <a href="#img3"><img src="images\Pom getting a trim.jpg" alt="Pom getting a trim"></a>
     <a href="#img4"><img src="images\Golden lab in bath.jpg" alt="Golden lab in bath"></a>
     <a href="#img5"><img src="images\Golden Cocker getting a trim.jpg" alt="Golden Cocker getting a trim"></a>
-    <a href="#img6"><img src="\images\mut3.jpg" alt="Scottish terrier wrapped in towel"></a>
-    <a href="#img7"><img src="\images\Nail Trim.jpg" alt="Nail Trim"></a>
+    <a href="#img6"><img src="images\mut3.jpg" alt="Scottish terrier wrapped in towel"></a>
+    <a href="#img7"><img src="images\Nail Trim.jpg" alt="Nail Trim"></a>
     <a href="#img8"><img src="images\groomed-yorkie.jpg" alt="Happy Yorkie"></a>
-    <a href="#img9"><img src="images\poodel trim.jpg" alt="poodle"></a>
-    <a href="#img10"><img src= "images\mut1.jpg" alt="Scottish terrier being combed"></a>
+    <a href="#img9"><img src="images\poodel trim.jpg" alt="Poodle"></a>
+    <a href="#img10"><img src="images\mut1.jpg" alt="Scottish terrier being combed"></a>
     <a href="#img11"><img src="images\Reb in a bubbkle bath.jpg" alt="red in a bubble bath"></a>
     <a href="#img12"><img src="images\Cooper in a tie.jpg" alt="Cooper smiling"></a>
     <a href="#img13"><img src="images\miniture schnauzer.jpg" alt="MINITURE SCHANUZER"></a>
