--- a/gallery.html
+++ b/gallery.html
@@ -19,8 +19,8 @@
         <button class="theme-toggle" aria-label="Toggle Theme">🌛</button>
     </div>
 
-    <!-- Navbar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+     <!-- Navbar-->
+     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <!-- Logo and Brand Name -->
             <a class="navbar-brand d-flex align-items-center" href="index.html">
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!-- Push to the right using ms-auto -->
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="navbar.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="gallery.html">Gallery</a>
