--- a/services.html
+++ b/services.html
@@ -18,8 +18,8 @@
         <button class="theme-toggle" aria-label="Toggle Theme">🌛</button>
     </div>
 
-    <!-- Navbar-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+     <!-- Navbar-->
+     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <!-- Logo and Brand Name -->
             <a class="navbar-brand d-flex align-items-center" href="index.html">
@@ -46,9 +46,9 @@
                             Services
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/#service1">Service1</a></li>
-                            <li><a class="dropdown-item" href="/#service2">Service2</a></li>
-                            <li><a class="dropdown-item" href="/#service3">Service3</a></li>
+                            <li><a class="dropdown-item" href="#">Service1</a></li>
+                            <li><a class="dropdown-item" href="#">Service2</a></li>
+                            <li><a class="dropdown-item" href="#">Service3</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
