--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,8 @@
 <html lang="en" data-bs-theme="light">
 <head>
     <title>Woof Cutz</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive design -->  
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive design --> 
+    <link rel="stylesheet" href="style.css"> 
     <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
