--- a/services.html
+++ b/services.html
@@ -3,6 +3,7 @@
     <title>Woof Cutz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive design -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesercon.css">
     <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -74,7 +75,7 @@
           </div>
         <div class="col-sm-4">
           <div class="card h-100">
-            <img src="/images/nail-clipping-6926862_640.jpg" class="card-img-top" alt="...">
+            <img src="/images/dog-7565682_640.jpg" class="card-img-top" alt="...">
             <div class="card-body d-flex flex-column">
               <h5 class="card-ttle">Haircut</h5>
               <p class="card-text">Give your dog a fresh, stylish look with our professional haircut services! We ensure your pup is comfortable while achieving a cut that suits their breed and personality.</p>
@@ -84,7 +85,7 @@
         </div>
         <div class="col-sm-4">
             <div class="card h-100">
-              <img src="/images/nail-clipping-6926862_640.jpg" class="card-img-top" alt="...">
+              <img src="/images/dog-wash-4125187_640.jpg" class="card-img-top" alt="...">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Full grrom</h5>
                 <p class="card-text">Treat your dog to a complete grooming experience! Our full groom includes bathing, brushing, nail trimming, and a stylish haircut, leaving your pup clean, comfortable, and looking their best.</p>
