--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesercon.css">
 
 </head>
 <body class="Light-mode">
@@ -62,26 +63,58 @@
 
     <!-- contact page items-->
 
-    <div>contact</div>
-    <div>contact</div>
-    <div>contact</div>
-    <div>contact</div>
-    <div>contact</div>
-    <div>contact</div>
-    <div>contact</div>
-    <div>contact</div>
+    
+    <div class="input-group mb-3">
+        <input type="text" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="First Name">
+        <input type="text" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Last Name">
+      </div>
 
+      <div class="input-group mb-3">
+        <input type="email" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Email address">
+      </div>
 
+      <div class="input-group mb-3">
+        <input type="tel" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Phone">
+      </div>
+      <h3>Tell us about your dog</h3>
+      <div class="input-group mb-3">
+        <input type="email" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Dog's name">
+      </div>
 
+      <div class="input-group mb-3">
+        <div class="form-floating">
+            <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+              <option value="1">Poodle</option>
+              <option value="2">Pitbull</option>
+              <option value="3">Lab</option>
+            </select>
+            <label for="floatingSelect">What breed is your dog?</label>
+          </div>
+      </div>
 
-
-
-
-
-
-
-
-
+      <div class="input-group mb-3">
+        <div id="slider">
+      <label for="customRange3" class="form-label">Approx weight of your dog</label>
+      <input type="range" class="form-range" min="2" max="50" step="1" id="customRange3">
+      <div style="display: flex; justify-content: space-between; font-size: 14px; margin-top: 5px;">
+        <span>2 Kg</span>
+        <span>26 Kg</span>
+        <span>50 Kg</span>
+      </div>
+      <h4 id="dog-weight"> 
+        <span id="curr"></span> Kg
+    </h4> 
+      </div>
+    </div>
+      
+      <script> 
+        var el = document.getElementById('curr'); 
+        var r = document.getElementById('customRange3'); 
+        el.innerText = r.valueAsNumber; 
+        r.addEventListener('change', () => { 
+            el.innerText = r.valueAsNumber; 
+        }) 
+    </script> 
 
 
 
