--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
     <!-- contact page items-->
 
-    
+    <div id="contact">
     <div class="input-group mb-3">
         <input type="text" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="First Name">
         <input type="text" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Last Name">
@@ -106,6 +106,7 @@
     </h4> 
       </div>
     </div>
+</div>
       
       <script> 
         var el = document.getElementById('curr'); 
