--- a/contact.html
+++ b/contact.html
@@ -65,24 +65,33 @@
 
     <div id="contact">
         <form name="contactform" method="post" class="needs-validation" novalidate>
-            <div class="input-group mb-3">
-        <input type="text" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="First Name" required="">
+            <div class="input-group mb-3 has-validation">
+                <span class="input-group-text" id="inputGroupPrepend"><i class="fa-solid fa-user" style="color: #000000;"></i></span>
+        <input type="text" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="First Name" required>
         <div class="invalid-feedback">
             Enter your first name
         </div>
-        <input type="text" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Last Name" required="">
+        <input type="text" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Last Name" required>
         <div class="invalid-feedback">
             Enter your last name
         </div>
     </div>
 
-      <div class="input-group mb-3">
-        <input type="email" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Email address">
-      </div>
+      <div class="input-group mb-3 has-validation">
+        <span class="input-group-text" id="inputGroupPrepend"><i class="fa-solid fa-envelope" style="color: #000000;"></i></span>
+        <input type="email" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Email address" required>
+        <div class="invalid-feedback">
+            Please provide email.
+          </div>
+    </div>
 
       <div class="input-group mb-3">
+        <span class="input-group-text" id="inputGroupPrepend"><i class="fa-solid fa-phone" style="color: #000000;"></i></span>
         <input type="tel" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Phone">
-      </div>
+        <div class="invalid-feedback">
+            Please provide phone number.
+          </div>
+    </div>
       <h3>Tell us about your dog</h3>
       <div class="input-group mb-3">
         <input type="email" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Dog's name">
@@ -117,6 +126,26 @@
     </form>
 </div>
       
+    <script>
+       (function (){
+       'use strict'
+
+  // Fetch all the forms we want to apply custom Bootstrap validation styles to
+  const forms = document.querySelectorAll('.needs-validation')
+
+  // Loop over them and prevent submission
+  Array.from(forms).forEach(form => {
+    form.addEventListener('submit', event => {
+      if (!form.checkValidity()) {
+        event.preventDefault()
+        event.stopPropagation()
+      }
+
+      form.classList.add('was-validated')
+    }, false)
+})
+       })()
+    </script>
       <script> 
         var el = document.getElementById('curr'); 
         var r = document.getElementById('customRange3'); 
