More form styling

--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,7 @@
     <!-- contact page items-->
 
     <div id="contact">
+        <p>Enter your details below and we will be in touch to arrange an appointment</p>
         <form name="contactform" method="post" class="needs-validation" novalidate>
             <div class="input-group mb-3 has-validation">
                 <span class="input-group-text" id="inputGroupPrepend"><i class="fa-solid fa-user" style="color: #000000;"></i></span>
@@ -125,12 +126,12 @@
     </div>
     <div id="servicesform">
     <h3>Which service would you like</h3>
-    <input type="checkbox" class="btn-check" id="nail-trim" autocomplete="off">
-    <label class="btn btn-primary" for="nail-trim">Nail trim</label>
-    <input type="checkbox" class="btn-check" id="wash" autocomplete="off">
-    <label class="btn btn-primary" for="wash">Wash</label>
-    <input type="checkbox" class="btn-check" id="groom" autocomplete="off">
-    <label class="btn btn-primary" for="groom">Full groom</label>
+                <input type="checkbox" class="btn-check" id="nail-trim" autocomplete="off">
+                <label class="btn btn-primary" for="nail-trim">Nail trim</label>
+                <input type="checkbox" class="btn-check" id="wash" autocomplete="off">
+                <label class="btn btn-primary" for="wash">Wash</label>
+                <input type="checkbox" class="btn-check" id="groom" autocomplete="off">
+                <label class="btn btn-primary" for="groom">Full groom</label>
     </div>
     <button class="btn btn-primary" type="submit">Submit form</button>
     </form>
