mobile styling contact

--- a/contact.html
+++ b/contact.html
@@ -136,19 +136,19 @@
     <button class="btn btn-primary" type="submit">Submit form</button>
     </form>
 </div>
-<div class="container"></div>
+<div class="container contactbox">
 <div class="row align-items-center">
-    <div class="col-sm-4 offset-sm-2">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13436.470446849411!2d-9.095015!3d53.997897!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48594f001623c511%3A0x49d3bd05e0ce7bc7!2sWoof%20Cutz%20-%20Dog%20Groomer!5e1!3m2!1sen!2sie!4v1733324795886!5m2!1sen!2sie" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="col-sm-6 offset-sm-1">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13436.470446849411!2d-9.095015!3d53.997897!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48594f001623c511%3A0x49d3bd05e0ce7bc7!2sWoof%20Cutz%20-%20Dog%20Groomer!5e1!3m2!1sen!2sie!4v1733324795886!5m2!1sen!2sie" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <div class="col-sm-3 align-items-center" id="contactdets">
-        <h4 class="align-middle">Contact Details</h4>
-        <a href="tel:+353871234567"><i class="fa-solid fa-phone"></i> 087 1234 567</a><br>
-        <a href="mailto:info@woofcutz.ie"><i class="fa-solid fa-envelope"></i> info@woofcutz.ie</a><br>
-        <p><i class="fa-solid fa-map"></i>Rinnananny,<br>
-            <span style="padding-right:18px;"></span>Rinnaney,<br>
-            <span style="padding-right:18px;"></span>Co. Mayo</p>
-            <div class="row d-flex justify-content-start">
+    <div class="col-8 offset-2 col-sm-3 offset-sm-0 align-items-center" id="contactdets">
+        <h3 class="align-middle">Contact Details</h3>
+        <a href="tel:+353871234567" class="pb-2"><i class="fa-solid fa-phone"></i> 087 1234 567</a><br><br>
+        <a href="mailto:info@woofcutz.ie"><i class="fa-solid fa-envelope"></i> info@woofcutz.ie</a><br><br>
+        <p><i class="fa-solid fa-map"></i> Rinnananny,<br>
+            <span class="addr" style="padding-right:28px;"></span>Rinnaney,<br>
+            <span class="addr" style="padding-right:28px;"></span>Co. Mayo</p>
+            <div class="row d-flex justify-content-sm-start justify-content-center">
                 <div class="col-1">
                     <i class="fa-brands fa-facebook fa-2xl"></i>
                 </div>
