Fixed review slider to show on mobile

--- a/services.html
+++ b/services.html
@@ -129,7 +129,7 @@
         </div>
         <h1>Our reviews</h1>
 
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="width:70%; margin:auto;">
+        <div id="carouselExampleCaptions" class="carousel slide col-12" data-bs-ride="carousel" >
             <div class="carousel-indicators" >
               <button type="button" data-bs-target="#carouselExampleCaptions" style="background-color:black;" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -138,25 +138,37 @@
             <div class="carousel-inner">
               <div class="carousel-item active h-50">
                 
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption " >
                     <div class="card" >
                         <div class="card-body">
                             <i class="fa-brands fa-facebook fa-2xl"></i>
                           <h5 class="card-title">Yvonne Timony</h5>
-                          <h6 class="card-subtitle mb-2 text-body-secondary">⭐</h6>
+                          <h6 class="card-subtitle mb-2 text-body-secondary">⭐⭐⭐⭐⭐</h6>
                           <p class="card-text">Laura, was so professional and wonderful toTeal. So kind and gentle. Teal looked amazing after his grooming!would highly recommend Woof Cutz</p>
                         </div>
                       </div>
                 </div>
               </div>
               <div class="carousel-item h-50">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption ">
                     <div class="card" >
                         <div class="card-body">
                             <i class="fa-brands fa-facebook fa-2xl"></i>
                           <h5 class="card-title">Sharon Finnerty</h5>
-                          <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                          <h6 class="card-subtitle mb-2 text-body-secondary">⭐⭐⭐⭐⭐</h6>
                           <p class="card-text">Laura, was so professional and wonderful toTeal. So kind and gentle. Teal looked amazing after his grooming!would highly recommend Woof Cutz</p>
+                        </div>
+                      </div>
+                </div>
+              </div>
+              <div class="carousel-item h-50 align-self-start">
+                <div class="carousel-caption">
+                    <div class="card" >
+                        <div class="card-body">
+                            <i class="fa-brands fa-google fa-2xl"></i>
+                          <h5 class="card-title">Jane Doe</h5>
+                          <h6 class="card-subtitle mb-2 text-body-secondary">⭐⭐⭐⭐⭐</h6>
+                          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         </div>
                       </div>
                 </div>
