--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Woof Cutz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive design -->
-    
+    <link rel="stylesheet" href="stylesercon.css">
     <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -41,7 +41,7 @@
                       <a class="nav-link" href="gallery.html">Gallery</a>
                   </li>
                   <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <a class="nav-link dropdown-toggle" href="services.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Services
                       </a>
                       <ul class="dropdown-menu">
@@ -64,25 +64,29 @@
         <div class="welcome-box">
             <img src="images/mut1.jpg" alt="Yorkie getting a his hair combed">
             <h2>Welcome to Woof Cuts</h2>
-            <p>Co. Mayo’s trusted destination for exceptional dog grooming services.</p>
+            <p1>Co. Mayo’s trusted destination for exceptional dog grooming services.</p1>
         </div>
         <div class="welcome-box">
             <img src="images/mut2.jpg" alt="Small dog getting a trim">
             <h2>Professional Grooming</h2>
-            <p>From baths to nail trimming, we ensure your dog looks and feels great!</p>
+            <p1>From baths to nail trimming, we ensure your dog looks and feels great!</p1>
         </div>
         <div class="welcome-box">
             <img src="images/mut3.jpg" alt="Happy dog with after bath">
             <h2>Friendly Environment</h2>
-            <p>A calm and welcoming space for dogs of all breeds and sizes.</p>
+            <p1>A calm and welcoming space for dogs of all breeds and sizes.</p1>
         </div>
     </div>
 
     <!-- about us section -->
 
     <div class="about-us">
-        <h4 id="about-us">About Us</h4>
-        <p>Woof Cuts is dedicated to providing top-notch grooming services for your furry friends in Co. Mayo, Ireland. We treat every dog with care and love!</p>
+        <h1 id="about-us">About Us</h1>
+        <h5>Woof Cuts is dedicated to providing top-notch grooming services for your furry friends in Co. Mayo, Ireland. We treat every dog with care and love, ensuring they feel as special as they are! 💖
+
+            From a simple bath to a full grooming makeover, our skilled team provides services to suit your dog's breed, personality, and needs. At Woof Cuts, it's not just about looking good — it's about feeling good too. We create a stress-free, friendly environment where tails wag and hearts are happy.
+            
+            Your pet's happiness is our passion, and their comfort is our priority. Come see why we're Co. Mayo's favorite dog grooming destination! 🐶✨</h5>
     </div>
 
     <!-- Google Map -->
