--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <head>
     <title>Woof Cutz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive design -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesercon.css">
     <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -37,7 +37,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!-- Push to the right using ms-auto -->
                   <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#about-us">About Us</a>
+                      <a class="nav-link active" aria-current="page" href="index.html#about-us">About Us</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="gallery.html">Gallery</a>
@@ -64,7 +64,7 @@
     <!-- contact page items-->
 
     <div id="contact" class="col-10 offset-1 col-md-6 offset-md-3 shadow-lg">
-        <p>Enter your details below and we will be in touch to arrange an appointment</p>
+        <h3>Enter your details below and we will be in touch to arrange an appointment</h3>
         <form name="contactform" method="post" class="needs-validation " novalidate>
             <div class="input-group mb-3 has-validation">
                 <span class="input-group-text" id="inputGroupPrepend"><i class="fa-solid fa-user" style="color: #000000;"></i></span>
@@ -112,7 +112,10 @@
 
       <div class="input-group mb-3">
         <div id="slider">
-      <label for="customRange3" class="form-label">Approx weight of your dog</label>
+      <h3 label for="customRange3" class="form-label">Approx weight of your dog</label><h3
+        
+        
+        />
       <input type="range" class="form-range" min="2" max="50" step="1" id="customRange3">
       <div style="display: flex; justify-content: space-between; font-size: 14px; margin-top: 5px;">
         <span>2 Kg</span>
