--- a/gallery.html
+++ b/gallery.html
@@ -7,11 +7,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylesercon.css">
 </head>
 <body class="Light-mode">
     <!-- Include Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    
 
     <div class="theme-toggle-container">
         <button class="theme-toggle" aria-label="Toggle Theme">🌛</button>
@@ -34,13 +36,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> <!-- Push to the right using ms-auto -->
                   <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#about-us">About Us</a>
+                      <a class="nav-link active" aria-current="page" href="index.html#about-us">About Us</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="gallery.html">Gallery</a>
                   </li>
                   <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <a class="nav-link dropdown-toggle" href="services.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                           Services
                       </a>
                       <ul class="dropdown-menu">
