favicon for all pages and meta description

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="stylesercon.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.webp">
+    <meta name="description" content="Get in touch with us for all your dog grooming needs! Reach out to book an appointment, ask questions, or learn more about our services. We're here to help your pup shine—contact us today!">
 
 </head>
 <body class="Light-mode">
