--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.webp">
+    <meta name="description" content="Pamper your pup with professional grooming services! From baths and trims to nail care and styling, our expert dog groomers ensure your furry friend looks and feels their best. Book an appointment today!">
     
 </head>
 <body class="Light-mode">
