--- a/gallery.html
+++ b/gallery.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Responsive design -->
     <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.webp">
+    <meta name="description" content="Explore our gallery of happy, freshly groomed pups! See the transformations and discover the care and attention our expert dog groomers bring to every pet. Your dog could be next—book today!">
 </head>
 <body class="Light-mode">
     <!-- Include Bootstrap JS -->
@@ -266,7 +267,7 @@
             <p>&copy; 2024 Woof Cuts. All Rights Reserved.</p>
         </div>
     </footer>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
     <!-- FontAwesome Script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 </body>
