--- a/services.html
+++ b/services.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.webp">
+    <meta name="description" content="Discover our range of professional dog grooming services tailored to your pet’s needs. From baths and haircuts to nail trimming and specialty styling, we ensure your pup looks and feels their best. Learn more and book now!">
 
 
 </head>
