Added form success page

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 
     <div id="contact" class="col-10 offset-1 col-md-6 offset-md-3 shadow-lg">
         <p>Enter your details below and we will be in touch to arrange an appointment</p>
-        <form name="contactform" method="post" class="needs-validation " novalidate>
+        <form name="contactform" action="success.html" method="post" class="needs-validation " novalidate>
             <div class="input-group mb-3 has-validation">
                 <span class="input-group-text" id="inputGroupPrepend"><i class="fa-solid fa-user" style="color: #000000;"></i></span>
         <input type="text" class="form-control mb-1" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="First Name" required>
